add three more question solution and created package and publish it

--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",                     
+    "test": "node test.js",                         
+    "dev": "nodemon server.js",                     
+    "lint": "echo 'license: ISC'",              
+    "welcome": "echo 'Welcome to My Node App!'"   
   },
   "repository": {
     "type": "git",
@@ -17,12 +21,15 @@
   "homepage": "https://github.com/Dhruvi-Vavadiya/65_Dhruvi_2025_ICT3#readme",
   "description": "",
   "dependencies": {
+    "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
+    "registration_validation": "^1.0.0"
   }
 }
